Issue #1 fix: Overlay description on tiles should be left aligned

--- a/app/public/styles/main.css
+++ b/app/public/styles/main.css
@@ -258,6 +258,8 @@ th {
 .sliderCardHeading {
   font-family: 'sunbirdboldfont' !important;
   font-size: 1.1875em !important;
+  float: left;
+  padding-left: 10px;
 }
 .sliderCardDesc {
   font-family: 'sunbirdregularfont' !important;
@@ -536,6 +538,10 @@ th {
 }
 .cursor-pointer {
   cursor: pointer;
+}
+.cursor-pointerText {
+  cursor: text;
+  pointer-events: none !important;
 }
 .mouse-pointer {
   cursor: pointer;
